feat: new endpoint to get burn blocks `/extended/v1/burn_block`
